# folketinget_llm

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
data/: overblik.txt
data/text/: dk_forhandlinger_20222_20222M011_2023-01-05_1000.pdf.txt  dk_forhandlinger_20222_20222M012_2023-01-11_1300.pdf.txt  dk_forhandlinger_20222_20222M013_2023-01-17_1300.pdf.txt  dk_forhandlinger_20222_20222M014_2023-01-18_1300.pdf.txt  dk_forhandlinger_20222_20222M015_2023-01-19_0900.pdf.txt  dk_forhandlinger_20222_20222M016_2023-01-24_1300.pdf.txt  dk_forhandlinger_20222_20222M017_2023-01-25_1300.pdf.txt  dk_forhandlinger_20222_20222M018_2023-01-26_1000.pdf.txt  dk_forhandlinger_20222_20222M019_2023-01-31_1300.pdf.txt  dk_forhandlinger_20222_20222M020_2023-02-01_1300.pdf.txt  dk_forhandlinger_20222_20222M021_2023-02-02_1000.pdf.txt  dk_forhandlinger_20222_20222M022_2023-02-07_1300.pdf.txt  dk_forhandlinger_20222_20222M023_2023-02-07_1400.pdf.txt  dk_forhandlinger_20222_20222M024_2023-02-08_1300.pdf.txt  dk_forhandlinger_20222_20222M025_2023-02-09_1000.pdf.txt  dk_forhandlinger_20222_20222M026_2023-02-21_1300.pdf.txt  dk_forhandlinger_20222_20222M027_2023-02-22_1300.pdf.txt  dk_forhandlinger_20222_20222M028_2023-02-23_1000.pdf.txt  dk_forhandlinger_20222_20222M029_2023-02-28_1300.pdf.txt  dk_forhandlinger_20222_20222M030_2023-03-01_1300.pdf.txt  dk_forhandlinger_20222_20222M031_2023-03-02_1000.pdf.txt  (+82 more)
ft_gpt/: constants.py  ft_gpt.py  settings.py  utils.py
ft_gpt/cli/: main.py
ft_gpt/etl/: 1.md  2.md  (+8 more)
scripts/: run_etl_pipeline.py
tests/: create_nodes.py
(+13 files in other folders)
