[tool.poetry]
name = "ft_gpt"
version = "0.1.0"
description = ""
authors = ["Niklas Alexander Shern <nashern@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
llama-index = "0.10.12"
streamlit = "^1.31.1"


[tool.poetry.group.DEV.dependencies]
ipython = "^8.22.1"
bpython = "^0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
